# dojo-core

./: Cargo.toml  README.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  devcontainer.yml
bins/abigen/: Cargo.toml
bins/abigen/src/: main.rs
bins/demo-compiler/: Cargo.toml
bins/demo-compiler/src/: args.rs  main.rs
bins/demo-compiler/src/commands/: build.rs  clean.rs  dev.rs  mod.rs  test.rs
bins/language-server/: Cargo.toml
bins/language-server/src/: main.rs
crates/abigen/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: aux_data.rs  lib.rs  namespace_config.rs  plugin.rs  scarb_extensions.rs  utils.rs
crates/compiler/src/attribute_macros/: contract.rs  event.rs  interface.rs  model.rs
crates/compiler/src/compiler/: annotation.rs  artifact_manager.rs  cairo_compiler.rs  compiler.rs  compiler_test.rs  config.rs  contract_selector.rs  manifest.rs  mod.rs  test_utils.rs  version.rs
crates/compiler/src/compiler/scarb_internal/: debug.rs  mod.rs
crates/compiler/src/inline_macros/: emit.rs  utils.rs
crates/compiler/src/introspect/: size.rs
crates/compiler/src/manifest_test_data/: spawn-and-move
crates/compiler/src/plugin/: mod.rs  plugin.rs  plugin_test.rs
crates/compiler/src/plugin/attribute_macros/: common.rs  contract.rs  element.rs  event.rs  interface.rs  mod.rs  model.rs  patches.rs
crates/compiler/src/plugin/attribute_macros/patches/: contract.patch.cairo  default_init.patch.cairo  event.patch.cairo  model_field_store.patch.cairo  model_store.patch.cairo
crates/compiler/src/plugin/attribute_macros/templates/: entity_field_store.generate.cairo  model_field_store.generate.cairo  model_store.generate.cairo
crates/compiler/src/plugin/derive_macros/: mod.rs
crates/compiler/src/plugin/derive_macros/introspect/: layout.rs  utils.rs
crates/compiler/src/plugin/inline_macros/: delete.rs  emit.rs  get.rs  get_models_test_class_hashes.rs  set.rs  spawn_test_world.rs  utils.rs
crates/compiler/src/plugin/introspect/: mod.rs  ty.rs
crates/compiler/src/plugin/plugin_test_data/: event  introspect  model  system
crates/compiler/src/plugin/semantics/: test_utils.rs  tests.rs
crates/compiler/src/plugin/semantics/test_data/: get  get_models_test_class_hashes  set  spawn_test_world
crates/compiler/src/plugin/syntax/: utils.rs
crates/compiler/src/scarb_internal/: debug.rs  mod.rs
crates/compiler/src/semantics/: test_utils.rs  tests.rs
crates/compiler/src/syntax/: utils.rs
crates/contracts/: Scarb.toml
crates/contracts/src/: lib.cairo
crates/contracts/src/components/: world_provider.cairo
crates/contracts/src/contract/: base_contract.cairo  contract.cairo  upgradeable.cairo
crates/contracts/src/contract/components/: upgradeable.cairo  world_provider.cairo
crates/contracts/src/event/: event.cairo
crates/contracts/src/meta/: introspect.cairo
crates/contracts/src/model/: attributes.cairo  component.cairo  definition.cairo  entity.cairo  impls.cairo  interface.cairo  introspect.cairo  members.cairo  metadata.cairo  model.cairo  model_impl.cairo  model_value.cairo  storage.cairo  world_store.cairo
crates/contracts/src/storage/: database.cairo  entity_model.cairo  layout.cairo  packing.cairo  storage.cairo
crates/contracts/src/tests/: base.cairo  benchmarks.cairo  contract.cairo  helpers.cairo
crates/contracts/src/tests/expanded/: selector_attack.cairo
crates/contracts/src/tests/model/: model.cairo
crates/contracts/src/tests/world/: acl.cairo  contracts.cairo  entities.cairo  events.cairo  init.cairo  metadata.cairo  models.cairo  namespaces.cairo  resources.cairo  world.cairo
crates/contracts/src/utils/: descriptor.cairo  hash.cairo  key.cairo  snf_test.cairo  test.cairo  utils.cairo
crates/contracts/src/world/: config.cairo  errors.cairo  iworld.cairo  storage.cairo  update.cairo  world_contract.cairo
crates/core-cairo-test/: Scarb.toml
crates/core-cairo-test/src/: world.cairo
crates/core-cairo-test/src/tests/world/: acl.cairo
crates/macros/: Cargo.toml
crates/macros/src/: aux_data.rs  lib.rs  token_stream_ext.rs
crates/macros/src/attributes/: dojo_contract.rs  dojo_event.rs  dojo_interface.rs  dojo_model.rs  mod.rs  patches.rs  struct_parser.rs
crates/macros/src/attributes/patches/: event.patch.cairo  model_field_store.patch.cairo  model_store.patch.cairo
crates/macros/src/derives/: mod.rs  print.rs
crates/macros/src/derives/introspect/: layout.rs  mod.rs
crates/macros/src/syntax/: utils.rs  world_param.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  model.rs  naming.rs  packing.rs  schema.rs  world.rs
crates/types/tests/: json.rs
examples/dojo_simple/: Scarb.toml  dojo_dev.toml
examples/dojo_simple/dev/: dojo-base.json
examples/dojo_simple/dev/contracts/: DEFAULT_NAMESPACE-actions-3e1ea42a.toml
examples/dojo_simple/dev/models/: DEFAULT_NAMESPACE-ModelA-2c20a208.toml  DEFAULT_NAMESPACE-ModelInContract-4298a6a7.toml  DEFAULT_NAMESPACE-Position-479f0724.toml  dojo_contract_base_contract_base.toml  dojo_model_metadata_resource_metadata.toml  dojo_simple_sn_actions.toml  dojo_world_world_contract_world.toml
examples/dojo_simple/manifests/dev/: dojo-base.toml  dojo-world.toml
examples/dojo_simple/manifests/dev/base/: dojo-world.toml  dojo_simple_sn_actions.toml
examples/dojo_simple/manifests/dev/base/contracts/: ds-actions-51ca47f4.toml
examples/dojo_simple/manifests/dev/base/models/: ds-ModelA-4ad3758c.toml  ds-ModelInContract-4ccbe1ca.toml  ds-Position-2ddf9b74.toml
examples/dojo_simple/manifests/dev/contracts/: DEFAULT_NAMESPACE-actions-3e1ea42a.toml
examples/dojo_simple/manifests/dev/models/: DEFAULT_NAMESPACE-ModelA-2c20a208.toml  DEFAULT_NAMESPACE-ModelInContract-4298a6a7.toml  DEFAULT_NAMESPACE-Position-479f0724.toml
examples/dojo_simple/src/: lib.cairo
examples/simple/: Scarb.toml
examples/sn_simple/: Scarb.toml
examples/sn_simple/src/: lib.cairo
examples/spawn-and-move/: Scarb.toml  dojo_dev.toml
examples/spawn-and-move/src/: actions.cairo
examples/workspace/: Scarb.toml
scripts/: cairo_fmt.sh  rust_fmt.sh  tests.sh
