[workspace]
resolver = "2"

members = [
    "bins/abigen",
    "bins/demo-compiler",
    "bins/language-server",
    "crates/contracts",
    "crates/compiler",
    "crates/types",
    "crates/macros",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/dojoengine/dojo/"
version = "1.0.0-rc.1"

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[workspace.dependencies]
dojo-contracts = { path = "crates/contracts" }
dojo-types = { path = "crates/types" }
dojo-compiler = { path = "crates/compiler" }
dojo-macros = { path = "crates/macros" }

anyhow = "1.0.80"
assert_fs = "1.1"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.3", features = [ "abigen-rs" ] }
cairo-lang-compiler = "=2.8.4"
cairo-lang-debug = "=2.8.4"
cairo-lang-defs = "=2.8.4"
cairo-lang-diagnostics = "=2.8.4"
cairo-lang-filesystem = "=2.8.4"
cairo-lang-formatter = "=2.8.4"
cairo-lang-language-server = "=2.8.4"
cairo-lang-lowering = "=2.8.4"
cairo-lang-parser = "=2.8.4"
cairo-lang-plugins = { version = "=2.8.4", features = [ "testing" ] }
cairo-lang-project = "=2.8.4"
cairo-lang-semantic = "=2.8.4"
cairo-lang-sierra = "=2.8.4"
cairo-lang-sierra-generator = "=2.8.4"
cairo-lang-sierra-to-casm = "=2.8.4"
cairo-lang-starknet = "=2.8.4"
cairo-lang-starknet-classes = "=2.8.4"
cairo-lang-syntax = "=2.8.4"
cairo-lang-test-plugin = "=2.8.4"
cairo-lang-test-runner = "=2.8.4"
cairo-lang-test-utils = "=2.8.4"
cairo-lang-utils = "=2.8.4"
camino = { version = "1.1.2", features = [ "serde1" ] }
clap = { version = "4.5.4", features = [ "derive" ] }
clap-verbosity-flag = "2.0.1"
convert_case = "0.6.0"
crypto-bigint = { version = "0.5.3", features = [ "serde" ] }
hex = "0.4.3"
indoc = "1.0.7"
itertools = "0.12.1"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.0"
regex = "1.10.3"
salsa = { package = "rust-analyzer-salsa", version = "0.17.0-pre.6" }
scarb = { git = "https://github.com/software-mansion/scarb", tag = "v2.8.4" }
scarb-ui = { git = "https://github.com/software-mansion/scarb", tag = "v2.8.4" }
semver = "1.0.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
serde_with = "3.9.0"
smol_str = { version = "0.2.0", features = [ "serde" ] }
starknet = "0.12.0"
starknet-crypto = "0.7.1"
starknet-types-core = "0.1.6"
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.9.0"
test-log = "0.2.11"
thiserror = "1.0.32"
toml = "0.8"
tracing = "0.1.34"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter", "json" ] }
url = { version = "2.4.0", features = [ "serde" ] }
