[package]
name = "dojo-abigen"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
cainome.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-starknet-classes.workspace = true
camino.workspace = true
scarb.workspace = true
scarb-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
