[package]
edition.workspace = true
name = "demo-compiler"
version.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-test-runner.workspace = true
camino.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
dojo-compiler.workspace = true
notify = "6.0.1"
scarb.workspace = true
scarb-ui.workspace = true
smol_str.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
