[package]
name = "dojo-macros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cairo-lang-macro = "0.1"
cairo-lang-parser.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-syntax.workspace = true
convert_case.workspace = true
dojo-types.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
