[package]
name = "dojo-types"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cainome.workspace = true
crypto-bigint.workspace = true
hex.workspace = true
itertools.workspace = true
num-traits.workspace = true
regex.workspace = true
serde.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
